Fix spacing and alphabetize functions

--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,3 @@
-/* Header Text: Open Sans, Bold
-Body and Label Text: Open Sans, Light
-
-BACKGROUNDS
-DARK VIOLET #1F1F3D
-LILAC #A9AAD2
-LIGHT LILAC #EAEAF4
-
-IDEABOX STUFF
-WHITE #FFFFFF
-SLIGHT WHITE COLOR OF TEXT #E9E9F3
-COMMENT PURPLE #5356A4
-
-THIN LINE #353567
-FILTER STARRED Ideas #BFBFDD */
-
 * {
   margin: 0;
   font-family: "Open Sans";
@@ -62,7 +46,7 @@ nav {
 nav > h1 {
   color: #E9E9F3;
   padding: 17px;
-  padding-top:30px;
+  padding-top: 30px;
 }
 
 nav > h2 {
@@ -132,7 +116,7 @@ main {
 }
 
 .save-button-disabled {
-  background-color:#5356A4;
+  background-color: #5356A4;
   cursor: not-allowed;
 }
 
@@ -242,8 +226,8 @@ main {
 }
 
 label {
-  margin-bottom: .5%;
-  margin-left: -.7%;
+  margin-bottom: 0.5%;
+  margin-left: -0.7%;
   display: flex;
   align-items: flex-end;
   margin-top: -2%;
